// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodexParser parse should parse a new codex file 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            "abc def gh additional edit",
          ],
          "number": 1,
          "type": "verse",
        },
        {
          "content": [
            "test verse 2",
          ],
          "number": 2,
          "type": "verse",
        },
        {
          "content": [
            "test verse 3",
          ],
          "number": 3,
          "type": "verse",
        },
      ],
      "footnotes": [],
      "number": 1,
      "type": "chapter",
    },
  ],
  "id": "JOB",
  "type": "root",
}
`;

exports[`CodexParser parse should parse a newer codex file 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            "Paul, an apostle—sent not from men nor by man, but by Jesus Christ and God the Father, who raised Him from the dead—",
          ],
          "number": 1,
          "type": "verse",
        },
        {
          "content": [
            "and all the brothers with me,",
            {
              "lineBreak": true,
            },
            "To the churches of Galatia:",
          ],
          "number": 2,
          "type": "verse",
        },
        {
          "content": [
            "Grace and peace to you from God our Father and the Lord Jesus Christ,",
          ],
          "number": 3,
          "type": "verse",
        },
      ],
      "footnotes": [],
      "number": 1,
      "type": "chapter",
    },
  ],
  "id": "GAL",
  "type": "root",
}
`;

exports[`CodexParser parse should parse a newer codex file of MAT 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            "The book of the genealogy of Jesus the Anointed, son of David, son of Abraham.",
          ],
          "number": 1,
          "type": "verse",
        },
        {
          "content": [
            "Abraham fathered Isaac, Isaac fathered Jacob, and Jacob fathered Judah and his brothers,",
          ],
          "number": 2,
          "type": "verse",
        },
        {
          "content": [
            "Aram fathered Amminadab, and Amminadab fathered Nahshon, and Nahshon fathered Salmon,",
          ],
          "number": 4,
          "type": "verse",
        },
        {
          "content": [
            "Salmon fathered Boaz by Rahab, and Boaz fathered Obed by Ruth, and Obed fathered Jesse,",
          ],
          "number": 5,
          "type": "verse",
        },
      ],
      "footnotes": [],
      "number": 1,
      "type": "chapter",
    },
  ],
  "id": "MAT",
  "type": "root",
}
`;

exports[`CodexParser parse should properly parse footnotes 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            "The book of the genealogy of Jesus the Anointed, son of David, son of Abraham.",
          ],
          "number": 1,
          "type": "verse",
        },
        {
          "content": [
            "Abraham fathered Isaac, Isaac fathered Jacob, and Jacob fathered Judah and his brothers,",
          ],
          "number": 2,
          "type": "verse",
        },
        {
          "content": [
            "Aram fathered Amminadab, and Amminadab fathered Nahshon, and Nahshon fathered Salmon,",
          ],
          "number": 4,
          "type": "verse",
        },
        {
          "content": [
            "Salmon fathered Boaz by Rahab, and Boaz fathered Obed by Ruth, and Obed fathered Jesse,",
          ],
          "number": 5,
          "type": "verse",
        },
      ],
      "footnotes": [
        {
          "caller": null,
          "noteId": 0,
          "text": "Abraham.: This is my footnote!",
        },
      ],
      "number": 1,
      "type": "chapter",
    },
  ],
  "id": "MAT",
  "type": "root",
}
`;
